Setup basic posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,15 +27,15 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
+                  Brent Anderson<br />
+                  iOS + NodeJS Hacker<br />
+                  me@brentjanderson.com
                 </p>
               </div>
               <div class="contact">
                 <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                  <a href="http://github.com/brentjanderson/">github.com/brentjanderson</a><br />
+                  <a href="http://twitter.com/brentjanderson/">twitter.com/brentjanderson</a><br />
                 </p>
               </div>
             </div>
