--- a/css/main.css
+++ b/css/main.css
@@ -1,160 +1,77 @@
-/*****************************************************************************/
-/*
-/* Common
-/*
-/*****************************************************************************/
-
-/* Global Reset */
-* {
-  margin: 0;
-  padding: 0;
-}
-
-html, body { height: 100%; }
+/* @override http://localhost/css/main.css */
 
 body {
-  background-color: #FFF;
-  font: 13.34px Helvetica, Arial, sans-serif;
-  font-size: small;
-  text-align: center;
+    /*	background: url(../img/dust.png) repeat;*/
+    margin-bottom: 2em;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-size: 100%; }
-
-h1 { margin-bottom: 1em; }
-p { margin: 1em 0; }
-
-a         { color: #00a; }
-a:hover   { color: #000; }
-a:visited { color: #a0a; }
-
-/*****************************************************************************/
-/*
-/* Home
-/*
-/*****************************************************************************/
-ul.posts {
-  list-style-type: none;
-  margin-bottom: 2em;
+.img-polaroid-large {
+	padding: 13px;
 }
 
-ul.posts li {
-  line-height: 1.75em;
+#portfolio img.img-polaroid {
+    margin-bottom: 1em;
 }
 
-ul.posts span {
-  color: #aaa;
-  font-family: Monaco, "Courier New", monospace;
-  font-size: 80%;
+@media (min-width: 980px) {
+    body {
+        margin-top: 4em;
+    }
+	div.navbar-inner {
+		height: 0;
+	}
 }
 
-/*****************************************************************************/
-/*
-/* Site
-/*
-/*****************************************************************************/
-
-.site {
-  font-size: 115%;
-  text-align: justify;
-  width: 42em;
-  margin: 3em auto 2em;
-  line-height: 1.5em;
+@media (min-width: 768px) {
+    .bio-box {
+        text-align:center;
+    }
+    
+    #portfolio h5 {
+		font-size: 1.4em;
+	}
+	
+	#portfolio {
+		text-align: center;
+	}
+	
+	#portfolio p {
+		text-align: left;
+	}
 }
 
-.site .header a {
-  font-weight: bold;
-  text-decoration: none;
+@media (max-width: 767px) {
+	#about div.bio-box {
+		text-align: center;
+	}
+	#portfolio h5 {
+		font-size: 2em;
+	}
 }
 
-.site .header h1.title {
-  display: inline-block;
-  margin-bottom: 2em;
+/* icons */
+[class^="cus-"],
+[class*=" cus-"] {
+    display: inline-block;
+    width: 17px;
+    height: 16px;
+    *margin-right: .3em;
+    line-height: 14px;
+    vertical-align: text-top;
+    background-image: url("/img/nav/sprite.png");
+    background-position: 14px 14px;
+    background-repeat: no-repeat;
+}
+[class^="cus-"]:last-child,
+[class*=" cus-"]:last-child {
+    *margin-left: 0;
 }
 
-.site .header h1.title a {
-  color: #a00;
-}
-
-.site .header h1.title a:hover {
-  color: #000;
-}
-
-.site .header a.extra {
-  color: #aaa;
-  margin-left: 1em;
-}
-
-.site .header a.extra:hover {
-  color: #000;
-}
-
-.site .meta {
-  color: #aaa;
-}
-
-.site .footer {
-  font-size: 80%;
-  color: #666;
-  border-top: 4px solid #eee;
-  margin-top: 2em;
-  overflow: hidden;
-}
-
-.site .footer .contact {
-  float: left;
-  margin-right: 3em;
-}
-
-.site .footer .contact a {
-  color: #8085C1;
-}
-
-.site .footer .rss {
-  margin-top: 1.1em;
-  margin-right: -.2em;
-  float: right;
-}
-
-.site .footer .rss img {
-  border: 0;
-}
-
-/*****************************************************************************/
-/*
-/* Posts
-/*
-/*****************************************************************************/
-
-/* standard */
-.post pre {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .4em;
-}
-
-.post ul, .post ol {
-  margin-left: 1.35em;
-}
-
-.post code {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .2em;
-}
-
-.post pre code {
-  border: none;
-}
-
-/* terminal */
-.post pre.terminal {
-  border: 1px solid #000;
-  background-color: #333;
-  color: #FFF;
-}
-
-.post pre.terminal code {
-  background-color: #333;
-}
+/* icons code below */
+.cus-facebook{ background-position: 0 0; width: 14px; height: 14px; } 
+.cus-geeklist{ background-position: -19px 0; width: 14px; height: 14px; } 
+.cus-github{ background-position: -38px 0; width: 14px; height: 14px; } 
+.cus-googleplus{ background-position: -57px 0; width: 14px; height: 14px; } 
+.cus-linkedin{ background-position: -76px 0; width: 14px; height: 14px; } 
+.cus-tumblr{ background-position: -95px 0; width: 14px; height: 14px; } 
+.cus-twitter{ background-position: -114px 0; width: 14px; height: 14px; } 
