Clean up styling

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -6,12 +6,20 @@ div.home-icons {
 div.home-icons ul {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  flex-flow: row wrap;
   padding: 0;
   list-style: none;
   text-align: center;
-  flex-wrap: wrap;
 }
 
 div.home-icons ul li {
   flex: 1;
+  padding: 1rem;
+}
+
+@media (max-width: 390px) {
+  h1.display-2 {
+    font-size: 3rem;
+  }
 }
